fix issue with gap on right side of nav bar

--- a/assets/css/1-base/_global-vars.sass
+++ b/assets/css/1-base/_global-vars.sass
@@ -10,6 +10,9 @@ $nav-active: #0f1628
 $nav-hover: #87a5ff
 $nav-color: #435ea8
 
+// Sizes for landing page
+$landing-third: 34%
+$landing-two-thirds: 66%
 
 // old ones
 // TODO: remove before production
