--- a/assets/css/3-layouts/_header-landing.sass
+++ b/assets/css/3-layouts/_header-landing.sass
@@ -1,9 +1,9 @@
 nav
   .landing-nav
     position: absolute
-    width: 33%
+    width: 34%
     height: 100%
-    left: 66%
+    left: $landing-two-thirds:
     background-color: white
     transition: all 400ms ease-out
     z-index: 3
@@ -53,8 +53,8 @@ nav
       z-index: 5
 
     .landing-nav.show-mobile-nav
-      left: 33.3%
-      width: 66.6%
+      left: $landing-third
+      width: $landing-two-thirds:
       border-left: 2px solid $light-gray
 
     .landing-nav .close-icon
