--- a/assets/css/3-layouts/_landing-who.sass
+++ b/assets/css/3-layouts/_landing-who.sass
@@ -1,17 +1,17 @@
 section#who
   position: absolute
-  width: 66.6%
+  width: $landing-two-thirds:
   height: 33.3%
-  left: 66.6%
+  left: $landing-two-thirds:
   background-color: blue
   color: white
-  transition: all 400ms ease-in-out
+  transition: all 300ms ease-in-out
   z-index: 2
 
 section#who.show
   left: 0
   height: 100%
-  width: 66.6%
+  width: $landing-two-thirds:
 
   // .landing-wrap
   //   height: 100%
