--- a/assets/css/3-layouts/_landing.sass
+++ b/assets/css/3-layouts/_landing.sass
@@ -1,6 +1,6 @@
 section#landing
   position: absolute
-  width: 66.6%
+  width: $landing-two-thirds:
   height: 100%
 
   .landing-wrap
