--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -524,7 +524,7 @@ hr {
 
 nav .landing-nav {
   position: absolute;
-  width: 33%;
+  width: 34%;
   height: 100%;
   left: 66%;
   background-color: white;
@@ -572,7 +572,7 @@ nav .landing-nav {
     left: 100%;
     z-index: 5; }
   nav .landing-nav.show-mobile-nav {
-    left: 33.3%;
+    left: 34%;
     width: 66.6%;
     border-left: 2px solid #f2f2f2; }
   nav .landing-nav .close-icon {
